fixed spacing issues

--- a/src/app/control/components/importExport/CreateHeadlessCommand.less
+++ b/src/app/control/components/importExport/CreateHeadlessCommand.less
@@ -30,13 +30,13 @@
   }
 
   .headless-entry-row {
-    margin: @half-spacing;
+    margin: 0px @half-spacing;
     display: flex;
     .big-text;
 
     .headless-entry-label {
       margin: @half-spacing 0px;
-      padding: @half-spacing 0px;
+      padding: @half-spacing;
     }
 
     .headless-entry-input {
